# study_acting_planning_and_learning

./: README.md  architecture.drawio  pyproject.toml
src/dwr_domain/: model.py  sec2_examples.py  sec3_examples.py
src/forward_state_space_search/: algorithm.py  model.py  search_algorithm.py  template.py
src/int_domain/: demo_search.py  model.py
src/plan_space_planning/: flaw_resolution.py  model.py
src/state_transition_system/: action_schema.py  binding.py  dwr_domains.py  first_order_logic.py  model.py  plan_runner.py  problem.py  state_variable_planning_domain.py  state_variable_repr.py  system.py
src/state_variable_representation/: action.py  action_schema.py  applicable_action_builder.py  dwr_domains.py  first_order_logic.py  model.py  planning_domain.py  state_variable_planning_domain.py
state_transition_system/: system.py
