[project]
name = "study-acting-planning-and-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.410",
    "ruff>=0.15.16",
]
